--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "pdfkit": "^0.17.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
