--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
+    "prisma:generate": "prisma generate",
+    "prisma:seed": "node prisma/seed.js",
+    "prestart": "prisma generate",
     "build": "prisma generate",
     "start": "node src/index.js",
     "seed": "node prisma/seed.js",
